Update sign up link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div id="c51">
                     <span>New to Netflix?</span>
-                    <a>Sign up now.</a>
+                    <a href="https://www.netflix.com/">Sign up now.</a>
                 </div>
 
                 <div id="c52">
